<resources>
    <string name="app_name">Smart Competition House</string>
    <string name="competition_name">Competition starts</string>

    <string name="action_settings">User</string>
    <string name="smart_house">SMART HOUSE</string>
    <string name="competition">Competition</string>
    <string name="welcome_competition">Hi there! Start accumulating miles/km by walking, running or flying</string>
    <string name="see_competitors">Podium</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_podium_table_competition">PodiumTableCompetition</string>

    <!-- Smart home activity -->
    <string name="title_activity_smart_home">SmartHomeActivity</string>
    <string name="not_assigned">--</string>
    <string name="warning">WARNING: </string>
    <string name="send_mqtt">Publish</string>
    <string name="receive_mqtt">Subscribe</string>
    <string name="not_receive_mqtt">Unubscribe</string>
    <string name="door">Door state: </string>
    <string name="door_dstate">Unknown </string>
    <string name="temperature">Temperature: </string>
    <string name="pressure">Pressure: </string>
    <string name="publish_m">To publish </string>



    not_assigned


</resources>
